@@ -16,6 +16,9 @@
 
 package android.support.design.widget;
 
+import static android.support.annotation.RestrictTo.Scope.LIBRARY_GROUP;
+import static android.support.v4.utils.ObjectUtils.objectEquals;
+
 import android.content.Context;
 import android.content.res.Resources;
 import android.content.res.TypedArray;
@@ -42,14 +45,16 @@ import android.support.annotation.VisibleForTesting;
 import android.support.design.R;
 import android.support.v4.content.ContextCompat;
 import android.support.v4.graphics.drawable.DrawableCompat;
-import android.support.v4.os.ParcelableCompat;
-import android.support.v4.os.ParcelableCompatCreatorCallbacks;
+import android.support.v4.math.MathUtils;
+import android.support.v4.util.Pools;
 import android.support.v4.view.AbsSavedState;
 import android.support.v4.view.GravityCompat;
-import android.support.v4.view.MotionEventCompat;
 import android.support.v4.view.NestedScrollingParent;
+import android.support.v4.view.NestedScrollingParent2;
 import android.support.v4.view.NestedScrollingParentHelper;
 import android.support.v4.view.ViewCompat;
+import android.support.v4.view.ViewCompat.NestedScrollType;
+import android.support.v4.view.ViewCompat.ScrollAxis;
 import android.support.v4.view.WindowInsetsCompat;
 import android.text.TextUtils;
 import android.util.AttributeSet;
@@ -71,9 +76,6 @@ import java.util.Comparator;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-
-import static android.support.annotation.RestrictTo.Scope.GROUP_ID;
-import static android.support.design.widget.ViewUtils.objectEquals;
 
 /**
  * CoordinatorLayout is a super-powered {@link android.widget.FrameLayout FrameLayout}.
@@ -105,7 +107,7 @@ import static android.support.design.widget.ViewUtils.objectEquals;
  * {@link CoordinatorLayout.LayoutParams#dodgeInsetEdges} will be moved appropriately so that the
  * views do not overlap.</p>
  */
-public class CoordinatorLayout extends ViewGroup implements NestedScrollingParent {
+public class CoordinatorLayout extends ViewGroup implements NestedScrollingParent2 {
     static final String TAG = "CoordinatorLayout";
     static final String WIDGET_PACKAGE_NAME;
 
@@ -133,29 +135,38 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
     static final ThreadLocal<Map<String, Constructor<Behavior>>> sConstructors =
             new ThreadLocal<>();
 
-
     static final int EVENT_PRE_DRAW = 0;
     static final int EVENT_NESTED_SCROLL = 1;
     static final int EVENT_VIEW_REMOVED = 2;
 
     /** @hide */
-    @RestrictTo(GROUP_ID)
+    @RestrictTo(LIBRARY_GROUP)
     @Retention(RetentionPolicy.SOURCE)
     @IntDef({EVENT_PRE_DRAW, EVENT_NESTED_SCROLL, EVENT_VIEW_REMOVED})
     public @interface DispatchChangeEvent {}
 
     static final Comparator<View> TOP_SORTED_CHILDREN_COMPARATOR;
+    private static final Pools.Pool<Rect> sRectPool = new Pools.SynchronizedPool<>(12);
+
+    @NonNull
+    private static Rect acquireTempRect() {
+        Rect rect = sRectPool.acquire();
+        if (rect == null) {
+            rect = new Rect();
+        }
+        return rect;
+    }
+
+    private static void releaseTempRect(@NonNull Rect rect) {
+        rect.setEmpty();
+        sRectPool.release(rect);
+    }
 
     private final List<View> mDependencySortedChildren = new ArrayList<>();
     private final DirectedAcyclicGraph<View> mChildDag = new DirectedAcyclicGraph<>();
 
     private final List<View> mTempList1 = new ArrayList<>();
     private final List<View> mTempDependenciesList = new ArrayList<>();
-    private final Rect mTempRect1 = new Rect();
-    private final Rect mTempRect2 = new Rect();
-    private final Rect mTempRect3 = new Rect();
-    private final Rect mTempRect4 = new Rect();
-    private final Rect mTempRect5 = new Rect();
     private final int[] mTempIntPair = new int[2];
     private Paint mScrimPaint;
 
@@ -166,7 +177,6 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
     private int[] mKeylines;
 
     private View mBehaviorTouchView;
-    private View mNestedScrollingDirectChild;
     private View mNestedScrollingTarget;
 
     private OnPreDrawListener mOnPreDrawListener;
@@ -204,7 +214,7 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             final float density = res.getDisplayMetrics().density;
             final int count = mKeylines.length;
             for (int i = 0; i < count; i++) {
-                mKeylines[i] *= density;
+                mKeylines[i] = (int) (mKeylines[i] * density);
             }
         }
         mStatusBarBackground = a.getDrawable(R.styleable.CoordinatorLayout_statusBarBackground);
@@ -411,7 +421,7 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
 
         MotionEvent cancelEvent = null;
 
-        final int action = MotionEventCompat.getActionMasked(ev);
+        final int action = ev.getActionMasked();
 
         final List<View> topmostChildList = mTempList1;
         getTopSortedChildren(topmostChildList);
@@ -479,7 +489,7 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
     public boolean onInterceptTouchEvent(MotionEvent ev) {
         MotionEvent cancelEvent = null;
 
-        final int action = MotionEventCompat.getActionMasked(ev);
+        final int action = ev.getActionMasked();
 
         // Make sure we reset in case we had missed a previous important event.
         if (action == MotionEvent.ACTION_DOWN) {
@@ -505,7 +515,7 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
         boolean cancelSuper = false;
         MotionEvent cancelEvent = null;
 
-        final int action = MotionEventCompat.getActionMasked(ev);
+        final int action = ev.getActionMasked();
 
         if (mBehaviorTouchView != null || (cancelSuper = performIntercept(ev, TYPE_ON_TOUCH))) {
             // Safe since performIntercept guarantees that
@@ -617,7 +627,8 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             }
             if (defaultBehavior != null) {
                 try {
-                    result.setBehavior(defaultBehavior.value().newInstance());
+                    result.setBehavior(
+                            defaultBehavior.value().getDeclaredConstructor().newInstance());
                 } catch (Exception e) {
                     Log.e(TAG, "Default behavior class " + defaultBehavior.value().getName() +
                             " could not be instantiated. Did you forget a default constructor?", e);
@@ -646,14 +657,13 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
                     continue;
                 }
                 final View other = getChildAt(j);
-                final LayoutParams otherLp = getResolvedLayoutParams(other);
-                if (otherLp.dependsOn(this, other, view)) {
+                if (lp.dependsOn(this, view, other)) {
                     if (!mChildDag.contains(other)) {
                         // Make sure that the other node is added
                         mChildDag.addNode(other);
                     }
                     // Now add the dependency to the graph
-                    mChildDag.addEdge(view, other);
+                    mChildDag.addEdge(other, view);
                 }
             }
         }
@@ -782,14 +792,13 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
 
             heightUsed = Math.max(heightUsed, heightPadding + child.getMeasuredHeight() +
                     lp.topMargin + lp.bottomMargin);
-            childState = ViewCompat.combineMeasuredStates(childState,
-                    ViewCompat.getMeasuredState(child));
+            childState = View.combineMeasuredStates(childState, child.getMeasuredState());
         }
 
-        final int width = ViewCompat.resolveSizeAndState(widthUsed, widthMeasureSpec,
-                childState & ViewCompat.MEASURED_STATE_MASK);
-        final int height = ViewCompat.resolveSizeAndState(heightUsed, heightMeasureSpec,
-                childState << ViewCompat.MEASURED_HEIGHT_STATE_SHIFT);
+        final int width = View.resolveSizeAndState(widthUsed, widthMeasureSpec,
+                childState & View.MEASURED_STATE_MASK);
+        final int height = View.resolveSizeAndState(heightUsed, heightMeasureSpec,
+                childState << View.MEASURED_HEIGHT_STATE_SHIFT);
         setMeasuredDimension(width, height);
     }
 
@@ -1047,12 +1056,16 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
     private void layoutChildWithAnchor(View child, View anchor, int layoutDirection) {
         final LayoutParams lp = (LayoutParams) child.getLayoutParams();
 
-        final Rect anchorRect = mTempRect1;
-        final Rect childRect = mTempRect2;
-        getDescendantRect(anchor, anchorRect);
-        getDesiredAnchoredChildRect(child, layoutDirection, anchorRect, childRect);
-
-        child.layout(childRect.left, childRect.top, childRect.right, childRect.bottom);
+        final Rect anchorRect = acquireTempRect();
+        final Rect childRect = acquireTempRect();
+        try {
+            getDescendantRect(anchor, anchorRect);
+            getDesiredAnchoredChildRect(child, layoutDirection, anchorRect, childRect);
+            child.layout(childRect.left, childRect.top, childRect.right, childRect.bottom);
+        } finally {
+            releaseTempRect(anchorRect);
+            releaseTempRect(childRect);
+        }
     }
 
     /**
@@ -1131,7 +1144,7 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
      */
     private void layoutChild(View child, int layoutDirection) {
         final LayoutParams lp = (LayoutParams) child.getLayoutParams();
-        final Rect parent = mTempRect1;
+        final Rect parent = acquireTempRect();
         parent.set(getPaddingLeft() + lp.leftMargin,
                 getPaddingTop() + lp.topMargin,
                 getWidth() - getPaddingRight() - lp.rightMargin,
@@ -1147,18 +1160,28 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             parent.bottom -= mLastInsets.getSystemWindowInsetBottom();
         }
 
-        final Rect out = mTempRect2;
+        final Rect out = acquireTempRect();
         GravityCompat.apply(resolveGravity(lp.gravity), child.getMeasuredWidth(),
                 child.getMeasuredHeight(), parent, out, layoutDirection);
         child.layout(out.left, out.top, out.right, out.bottom);
+
+        releaseTempRect(parent);
+        releaseTempRect(out);
     }
 
     /**
-     * Return the given gravity value or the default if the passed value is NO_GRAVITY.
-     * This should be used for children that are not anchored to another view or a keyline.
+     * Return the given gravity value, but if either or both of the axes doesn't have any gravity
+     * specified, the default value (start or top) is specified. This should be used for children
+     * that are not anchored to another view or a keyline.
      */
     private static int resolveGravity(int gravity) {
-        return gravity == Gravity.NO_GRAVITY ? GravityCompat.START | Gravity.TOP : gravity;
+        if ((gravity & Gravity.HORIZONTAL_GRAVITY_MASK) == Gravity.NO_GRAVITY) {
+            gravity |= GravityCompat.START;
+        }
+        if ((gravity & Gravity.VERTICAL_GRAVITY_MASK) == Gravity.NO_GRAVITY) {
+            gravity |= Gravity.TOP;
+        }
+        return gravity;
     }
 
     /**
@@ -1187,7 +1210,7 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
                     mScrimPaint = new Paint();
                 }
                 mScrimPaint.setColor(lp.mBehavior.getScrimColor(this, child));
-                mScrimPaint.setAlpha(MathUtils.constrain(Math.round(255 * scrimAlpha), 0, 255));
+                mScrimPaint.setAlpha(MathUtils.clamp(Math.round(255 * scrimAlpha), 0, 255));
 
                 final int saved = canvas.save();
                 if (child.isOpaque()) {
@@ -1225,11 +1248,17 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
     final void onChildViewsChanged(@DispatchChangeEvent final int type) {
         final int layoutDirection = ViewCompat.getLayoutDirection(this);
         final int childCount = mDependencySortedChildren.size();
-        final Rect inset = mTempRect4;
-        inset.setEmpty();
+        final Rect inset = acquireTempRect();
+        final Rect drawRect = acquireTempRect();
+        final Rect lastDrawRect = acquireTempRect();
+
         for (int i = 0; i < childCount; i++) {
             final View child = mDependencySortedChildren.get(i);
             final LayoutParams lp = (LayoutParams) child.getLayoutParams();
+            if (type == EVENT_PRE_DRAW && child.getVisibility() == View.GONE) {
+                // Do not try to update GONE child views in pre draw updates.
+                continue;
+            }
 
             // Check child views before for anchor
             for (int j = 0; j < i; j++) {
@@ -1241,7 +1270,6 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             }
 
             // Get the current draw rect of the view
-            final Rect drawRect = mTempRect1;
             getChildRect(child, true, drawRect);
 
             // Accumulate inset sizes
@@ -1271,9 +1299,8 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
                 offsetChildByInset(child, inset, layoutDirection);
             }
 
-            if (type == EVENT_PRE_DRAW) {
+            if (type != EVENT_VIEW_REMOVED) {
                 // Did it change? if not continue
-                final Rect lastDrawRect = mTempRect2;
                 getLastChildRect(child, lastDrawRect);
                 if (lastDrawRect.equals(drawRect)) {
                     continue;
@@ -1317,6 +1344,10 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
                 }
             }
         }
+
+        releaseTempRect(inset);
+        releaseTempRect(drawRect);
+        releaseTempRect(lastDrawRect);
     }
 
     private void offsetChildByInset(final View child, final Rect inset, final int layoutDirection) {
@@ -1325,17 +1356,16 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             return;
         }
 
-        final Rect bounds = mTempRect5;
-        bounds.set(child.getLeft(), child.getTop(), child.getRight(), child.getBottom());
-        if (bounds.isEmpty()) {
+        if (child.getWidth() <= 0 || child.getHeight() <= 0) {
             // Bounds are empty so there is nothing to dodge against, skip...
             return;
         }
 
         final LayoutParams lp = (LayoutParams) child.getLayoutParams();
         final Behavior behavior = lp.getBehavior();
-        final Rect dodgeRect = mTempRect3;
-        dodgeRect.setEmpty();
+        final Rect dodgeRect = acquireTempRect();
+        final Rect bounds = acquireTempRect();
+        bounds.set(child.getLeft(), child.getTop(), child.getRight(), child.getBottom());
 
         if (behavior != null && behavior.getInsetDodgeRect(this, child, dodgeRect)) {
             // Make sure that the rect is within the view's bounds
@@ -1348,8 +1378,12 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             dodgeRect.set(bounds);
         }
 
+        // We can release the bounds rect now
+        releaseTempRect(bounds);
+
         if (dodgeRect.isEmpty()) {
             // Rect is empty so there is nothing to dodge against, skip...
+            releaseTempRect(dodgeRect);
             return;
         }
 
@@ -1393,6 +1427,8 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
         if (!offsetX) {
             setInsetOffsetX(child, 0);
         }
+
+        releaseTempRect(dodgeRect);
     }
 
     private void setInsetOffsetX(View child, int offsetX) {
@@ -1554,9 +1590,9 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
     void offsetChildToAnchor(View child, int layoutDirection) {
         final LayoutParams lp = (LayoutParams) child.getLayoutParams();
         if (lp.mAnchorView != null) {
-            final Rect anchorRect = mTempRect1;
-            final Rect childRect = mTempRect2;
-            final Rect desiredChildRect = mTempRect3;
+            final Rect anchorRect = acquireTempRect();
+            final Rect childRect = acquireTempRect();
+            final Rect desiredChildRect = acquireTempRect();
 
             getDescendantRect(lp.mAnchorView, anchorRect);
             getChildRect(child, false, childRect);
@@ -1586,6 +1622,10 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
                     b.onDependentViewChanged(this, child, lp.mAnchorView);
                 }
             }
+
+            releaseTempRect(anchorRect);
+            releaseTempRect(childRect);
+            releaseTempRect(desiredChildRect);
         }
     }
 
@@ -1599,9 +1639,13 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
      * @return true if the point is within the child view's bounds, false otherwise
      */
     public boolean isPointInChildBounds(View child, int x, int y) {
-        final Rect r = mTempRect1;
+        final Rect r = acquireTempRect();
         getDescendantRect(child, r);
-        return r.contains(x, y);
+        try {
+            return r.contains(x, y);
+        } finally {
+            releaseTempRect(r);
+        }
     }
 
     /**
@@ -1614,13 +1658,17 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
      */
     public boolean doViewsOverlap(View first, View second) {
         if (first.getVisibility() == VISIBLE && second.getVisibility() == VISIBLE) {
-            final Rect firstRect = mTempRect1;
+            final Rect firstRect = acquireTempRect();
             getChildRect(first, first.getParent() != this, firstRect);
-            final Rect secondRect = mTempRect2;
+            final Rect secondRect = acquireTempRect();
             getChildRect(second, second.getParent() != this, secondRect);
-
-            return !(firstRect.left > secondRect.right || firstRect.top > secondRect.bottom
-                    || firstRect.right < secondRect.left || firstRect.bottom < secondRect.top);
+            try {
+                return !(firstRect.left > secondRect.right || firstRect.top > secondRect.bottom
+                        || firstRect.right < secondRect.left || firstRect.bottom < secondRect.top);
+            } finally {
+                releaseTempRect(firstRect);
+                releaseTempRect(secondRect);
+            }
         }
         return false;
     }
@@ -1652,21 +1700,29 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
 
     @Override
     public boolean onStartNestedScroll(View child, View target, int nestedScrollAxes) {
+        return onStartNestedScroll(child, target, nestedScrollAxes, ViewCompat.TYPE_TOUCH);
+    }
+
+    @Override
+    public boolean onStartNestedScroll(View child, View target, int axes, int type) {
         boolean handled = false;
 
         final int childCount = getChildCount();
         for (int i = 0; i < childCount; i++) {
             final View view = getChildAt(i);
+            if (view.getVisibility() == View.GONE) {
+                // If it's GONE, don't dispatch
+                continue;
+            }
             final LayoutParams lp = (LayoutParams) view.getLayoutParams();
             final Behavior viewBehavior = lp.getBehavior();
             if (viewBehavior != null) {
-                final boolean accepted = viewBehavior.onStartNestedScroll(this, view, child, target,
-                        nestedScrollAxes);
+                final boolean accepted = viewBehavior.onStartNestedScroll(this, view, child,
+                        target, axes, type);
                 handled |= accepted;
-
-                lp.acceptNestedScroll(accepted);
+                lp.setNestedScrollAccepted(type, accepted);
             } else {
-                lp.acceptNestedScroll(false);
+                lp.setNestedScrollAccepted(type, false);
             }
         }
         return handled;
@@ -1674,66 +1730,86 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
 
     @Override
     public void onNestedScrollAccepted(View child, View target, int nestedScrollAxes) {
-        mNestedScrollingParentHelper.onNestedScrollAccepted(child, target, nestedScrollAxes);
-        mNestedScrollingDirectChild = child;
+        onNestedScrollAccepted(child, target, nestedScrollAxes, ViewCompat.TYPE_TOUCH);
+    }
+
+    @Override
+    public void onNestedScrollAccepted(View child, View target, int nestedScrollAxes, int type) {
+        mNestedScrollingParentHelper.onNestedScrollAccepted(child, target, nestedScrollAxes, type);
         mNestedScrollingTarget = target;
 
         final int childCount = getChildCount();
         for (int i = 0; i < childCount; i++) {
             final View view = getChildAt(i);
             final LayoutParams lp = (LayoutParams) view.getLayoutParams();
-            if (!lp.isNestedScrollAccepted()) {
+            if (!lp.isNestedScrollAccepted(type)) {
                 continue;
             }
 
             final Behavior viewBehavior = lp.getBehavior();
             if (viewBehavior != null) {
-                viewBehavior.onNestedScrollAccepted(this, view, child, target, nestedScrollAxes);
+                viewBehavior.onNestedScrollAccepted(this, view, child, target,
+                        nestedScrollAxes, type);
             }
         }
     }
 
     @Override
     public void onStopNestedScroll(View target) {
-        mNestedScrollingParentHelper.onStopNestedScroll(target);
+        onStopNestedScroll(target, ViewCompat.TYPE_TOUCH);
+    }
+
+    @Override
+    public void onStopNestedScroll(View target, int type) {
+        mNestedScrollingParentHelper.onStopNestedScroll(target, type);
 
         final int childCount = getChildCount();
         for (int i = 0; i < childCount; i++) {
             final View view = getChildAt(i);
             final LayoutParams lp = (LayoutParams) view.getLayoutParams();
-            if (!lp.isNestedScrollAccepted()) {
+            if (!lp.isNestedScrollAccepted(type)) {
                 continue;
             }
 
             final Behavior viewBehavior = lp.getBehavior();
             if (viewBehavior != null) {
-                viewBehavior.onStopNestedScroll(this, view, target);
+                viewBehavior.onStopNestedScroll(this, view, target, type);
             }
-            lp.resetNestedScroll();
+            lp.resetNestedScroll(type);
             lp.resetChangedAfterNestedScroll();
         }
-
-        mNestedScrollingDirectChild = null;
         mNestedScrollingTarget = null;
     }
 
     @Override
     public void onNestedScroll(View target, int dxConsumed, int dyConsumed,
             int dxUnconsumed, int dyUnconsumed) {
+        onNestedScroll(target, dxConsumed, dyConsumed, dxUnconsumed, dyUnconsumed,
+                ViewCompat.TYPE_TOUCH);
+    }
+
+    @Override
+    public void onNestedScroll(View target, int dxConsumed, int dyConsumed,
+            int dxUnconsumed, int dyUnconsumed, int type) {
         final int childCount = getChildCount();
         boolean accepted = false;
 
         for (int i = 0; i < childCount; i++) {
             final View view = getChildAt(i);
+            if (view.getVisibility() == GONE) {
+                // If the child is GONE, skip...
+                continue;
+            }
+
             final LayoutParams lp = (LayoutParams) view.getLayoutParams();
-            if (!lp.isNestedScrollAccepted()) {
+            if (!lp.isNestedScrollAccepted(type)) {
                 continue;
             }
 
             final Behavior viewBehavior = lp.getBehavior();
             if (viewBehavior != null) {
                 viewBehavior.onNestedScroll(this, view, target, dxConsumed, dyConsumed,
-                        dxUnconsumed, dyUnconsumed);
+                        dxUnconsumed, dyUnconsumed, type);
                 accepted = true;
             }
         }
@@ -1745,6 +1821,11 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
 
     @Override
     public void onNestedPreScroll(View target, int dx, int dy, int[] consumed) {
+        onNestedPreScroll(target, dx, dy, consumed, ViewCompat.TYPE_TOUCH);
+    }
+
+    @Override
+    public void onNestedPreScroll(View target, int dx, int dy, int[] consumed, int  type) {
         int xConsumed = 0;
         int yConsumed = 0;
         boolean accepted = false;
@@ -1752,15 +1833,20 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
         final int childCount = getChildCount();
         for (int i = 0; i < childCount; i++) {
             final View view = getChildAt(i);
+            if (view.getVisibility() == GONE) {
+                // If the child is GONE, skip...
+                continue;
+            }
+
             final LayoutParams lp = (LayoutParams) view.getLayoutParams();
-            if (!lp.isNestedScrollAccepted()) {
+            if (!lp.isNestedScrollAccepted(type)) {
                 continue;
             }
 
             final Behavior viewBehavior = lp.getBehavior();
             if (viewBehavior != null) {
                 mTempIntPair[0] = mTempIntPair[1] = 0;
-                viewBehavior.onNestedPreScroll(this, view, target, dx, dy, mTempIntPair);
+                viewBehavior.onNestedPreScroll(this, view, target, dx, dy, mTempIntPair, type);
 
                 xConsumed = dx > 0 ? Math.max(xConsumed, mTempIntPair[0])
                         : Math.min(xConsumed, mTempIntPair[0]);
@@ -1786,8 +1872,13 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
         final int childCount = getChildCount();
         for (int i = 0; i < childCount; i++) {
             final View view = getChildAt(i);
+            if (view.getVisibility() == GONE) {
+                // If the child is GONE, skip...
+                continue;
+            }
+
             final LayoutParams lp = (LayoutParams) view.getLayoutParams();
-            if (!lp.isNestedScrollAccepted()) {
+            if (!lp.isNestedScrollAccepted(ViewCompat.TYPE_TOUCH)) {
                 continue;
             }
 
@@ -1810,8 +1901,13 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
         final int childCount = getChildCount();
         for (int i = 0; i < childCount; i++) {
             final View view = getChildAt(i);
+            if (view.getVisibility() == GONE) {
+                // If the child is GONE, skip...
+                continue;
+            }
+
             final LayoutParams lp = (LayoutParams) view.getLayoutParams();
-            if (!lp.isNestedScrollAccepted()) {
+            if (!lp.isNestedScrollAccepted(ViewCompat.TYPE_TOUCH)) {
                 continue;
             }
 
@@ -1926,6 +2022,10 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          * <p>Once a Behavior intercepts touch events, the rest of the event stream will
          * be sent to the {@link #onTouchEvent} method.</p>
          *
+         * <p>This method will be called regardless of the visibility of the associated child
+         * of the behavior. If you only wish to handle touch events when the child is visible, you
+         * should add a check to {@link View#isShown()} on the given child.</p>
+         *
          * <p>The default implementation of this method always returns false.</p>
          *
          * @param parent the parent view currently receiving this touch event
@@ -1946,6 +2046,10 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          * manipulate its child views. For example, a Behavior may allow a user to drag a
          * UI pane open or closed. This method should perform actual mutations of view
          * layout state.</p>
+         *
+         * <p>This method will be called regardless of the visibility of the associated child
+         * of the behavior. If you only wish to handle touch events when the child is visible, you
+         * should add a check to {@link View#isShown()} on the given child.</p>
          *
          * @param parent the parent view currently receiving this touch event
          * @param child the child view associated with this Behavior
@@ -2084,15 +2188,6 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
         }
 
         /**
-         * @deprecated this method is not called anymore. You can safely remove all usages
-         * and implementations. This method will be removed in a future release.
-         */
-        @Deprecated
-        public boolean isDirty(CoordinatorLayout parent, V child) {
-            return false;
-        }
-
-        /**
          * Called when the parent CoordinatorLayout is about to measure the given child view.
          *
          * <p>This method can be used to perform custom or modified measurement of a child view
@@ -2172,6 +2267,17 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             return lp.mBehaviorTag;
         }
 
+        /**
+         * @deprecated You should now override
+         * {@link #onStartNestedScroll(CoordinatorLayout, View, View, View, int, int)}. This
+         * method will still continue to be called if the type is {@link ViewCompat#TYPE_TOUCH}.
+         */
+        @Deprecated
+        public boolean onStartNestedScroll(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View directTargetChild, @NonNull View target,
+                @ScrollAxis int axes) {
+            return false;
+        }
 
         /**
          * Called when a descendant of the CoordinatorLayout attempts to initiate a nested scroll.
@@ -2187,16 +2293,34 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          * @param directTargetChild the child view of the CoordinatorLayout that either is or
          *                          contains the target of the nested scroll operation
          * @param target the descendant view of the CoordinatorLayout initiating the nested scroll
-         * @param nestedScrollAxes the axes that this nested scroll applies to. See
+         * @param axes the axes that this nested scroll applies to. See
          *                         {@link ViewCompat#SCROLL_AXIS_HORIZONTAL},
          *                         {@link ViewCompat#SCROLL_AXIS_VERTICAL}
+         * @param type the type of input which cause this scroll event
          * @return true if the Behavior wishes to accept this nested scroll
          *
-         * @see NestedScrollingParent#onStartNestedScroll(View, View, int)
+         * @see NestedScrollingParent2#onStartNestedScroll(View, View, int, int)
          */
-        public boolean onStartNestedScroll(CoordinatorLayout coordinatorLayout,
-                V child, View directTargetChild, View target, int nestedScrollAxes) {
+        public boolean onStartNestedScroll(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View directTargetChild, @NonNull View target,
+                @ScrollAxis int axes, @NestedScrollType int type) {
+            if (type == ViewCompat.TYPE_TOUCH) {
+                return onStartNestedScroll(coordinatorLayout, child, directTargetChild,
+                        target, axes);
+            }
             return false;
+        }
+
+        /**
+         * @deprecated You should now override
+         * {@link #onNestedScrollAccepted(CoordinatorLayout, View, View, View, int, int)}. This
+         * method will still continue to be called if the type is {@link ViewCompat#TYPE_TOUCH}.
+         */
+        @Deprecated
+        public void onNestedScrollAccepted(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View directTargetChild, @NonNull View target,
+                @ScrollAxis int axes) {
+            // Do nothing
         }
 
         /**
@@ -2213,14 +2337,30 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          * @param directTargetChild the child view of the CoordinatorLayout that either is or
          *                          contains the target of the nested scroll operation
          * @param target the descendant view of the CoordinatorLayout initiating the nested scroll
-         * @param nestedScrollAxes the axes that this nested scroll applies to. See
+         * @param axes the axes that this nested scroll applies to. See
          *                         {@link ViewCompat#SCROLL_AXIS_HORIZONTAL},
          *                         {@link ViewCompat#SCROLL_AXIS_VERTICAL}
+         * @param type the type of input which cause this scroll event
          *
-         * @see NestedScrollingParent#onNestedScrollAccepted(View, View, int)
+         * @see NestedScrollingParent2#onNestedScrollAccepted(View, View, int, int)
          */
-        public void onNestedScrollAccepted(CoordinatorLayout coordinatorLayout, V child,
-                View directTargetChild, View target, int nestedScrollAxes) {
+        public void onNestedScrollAccepted(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View directTargetChild, @NonNull View target,
+                @ScrollAxis int axes, @NestedScrollType int type) {
+            if (type == ViewCompat.TYPE_TOUCH) {
+                onNestedScrollAccepted(coordinatorLayout, child, directTargetChild,
+                        target, axes);
+            }
+        }
+
+        /**
+         * @deprecated You should now override
+         * {@link #onStopNestedScroll(CoordinatorLayout, View, View, int)}. This method will still
+         * continue to be called if the type is {@link ViewCompat#TYPE_TOUCH}.
+         */
+        @Deprecated
+        public void onStopNestedScroll(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View target) {
             // Do nothing
         }
 
@@ -2241,10 +2381,27 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          * @param child the child view of the CoordinatorLayout this Behavior is associated with
          * @param target the descendant view of the CoordinatorLayout that initiated
          *               the nested scroll
+         * @param type the type of input which cause this scroll event
          *
-         * @see NestedScrollingParent#onStopNestedScroll(View)
+         * @see NestedScrollingParent2#onStopNestedScroll(View, int)
          */
-        public void onStopNestedScroll(CoordinatorLayout coordinatorLayout, V child, View target) {
+        public void onStopNestedScroll(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View target, @NestedScrollType int type) {
+            if (type == ViewCompat.TYPE_TOUCH) {
+                onStopNestedScroll(coordinatorLayout, child, target);
+            }
+        }
+
+        /**
+         * @deprecated You should now override
+         * {@link #onNestedScroll(CoordinatorLayout, View, View, int, int, int, int, int)}.
+         * This method will still continue to be called if the type is
+         * {@link ViewCompat#TYPE_TOUCH}.
+         */
+        @Deprecated
+        public void onNestedScroll(@NonNull CoordinatorLayout coordinatorLayout, @NonNull V child,
+                @NonNull View target, int dxConsumed, int dyConsumed,
+                int dxUnconsumed, int dyUnconsumed) {
             // Do nothing
         }
 
@@ -2273,11 +2430,28 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          *                     operation, but requested by the user
          * @param dyUnconsumed vertical pixels not consumed by the target's own scrolling operation,
          *                     but requested by the user
+         * @param type the type of input which cause this scroll event
          *
-         * @see NestedScrollingParent#onNestedScroll(View, int, int, int, int)
+         * @see NestedScrollingParent2#onNestedScroll(View, int, int, int, int, int)
          */
-        public void onNestedScroll(CoordinatorLayout coordinatorLayout, V child, View target,
-                int dxConsumed, int dyConsumed, int dxUnconsumed, int dyUnconsumed) {
+        public void onNestedScroll(@NonNull CoordinatorLayout coordinatorLayout, @NonNull V child,
+                @NonNull View target, int dxConsumed, int dyConsumed,
+                int dxUnconsumed, int dyUnconsumed, @NestedScrollType int type) {
+            if (type == ViewCompat.TYPE_TOUCH) {
+                onNestedScroll(coordinatorLayout, child, target, dxConsumed, dyConsumed,
+                        dxUnconsumed, dyUnconsumed);
+            }
+        }
+
+        /**
+         * @deprecated You should now override
+         * {@link #onNestedPreScroll(CoordinatorLayout, View, View, int, int, int[], int)}.
+         * This method will still continue to be called if the type is
+         * {@link ViewCompat#TYPE_TOUCH}.
+         */
+        @Deprecated
+        public void onNestedPreScroll(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View target, int dx, int dy, @NonNull int[] consumed) {
             // Do nothing
         }
 
@@ -2306,12 +2480,16 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          * @param consumed out parameter. consumed[0] should be set to the distance of dx that
          *                 was consumed, consumed[1] should be set to the distance of dy that
          *                 was consumed
+         * @param type the type of input which cause this scroll event
          *
-         * @see NestedScrollingParent#onNestedPreScroll(View, int, int, int[])
+         * @see NestedScrollingParent2#onNestedPreScroll(View, int, int, int[], int)
          */
-        public void onNestedPreScroll(CoordinatorLayout coordinatorLayout, V child, View target,
-                int dx, int dy, int[] consumed) {
-            // Do nothing
+        public void onNestedPreScroll(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View target, int dx, int dy, @NonNull int[] consumed,
+                @NestedScrollType int type) {
+            if (type == ViewCompat.TYPE_TOUCH) {
+                onNestedPreScroll(coordinatorLayout, child, target, dx, dy, consumed);
+            }
         }
 
         /**
@@ -2341,8 +2519,9 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          *
          * @see NestedScrollingParent#onNestedFling(View, float, float, boolean)
          */
-        public boolean onNestedFling(CoordinatorLayout coordinatorLayout, V child, View target,
-                float velocityX, float velocityY, boolean consumed) {
+        public boolean onNestedFling(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View target, float velocityX, float velocityY,
+                boolean consumed) {
             return false;
         }
 
@@ -2369,8 +2548,8 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
          *
          * @see NestedScrollingParent#onNestedPreFling(View, float, float)
          */
-        public boolean onNestedPreFling(CoordinatorLayout coordinatorLayout, V child, View target,
-                float velocityX, float velocityY) {
+        public boolean onNestedPreFling(@NonNull CoordinatorLayout coordinatorLayout,
+                @NonNull V child, @NonNull View target, float velocityX, float velocityY) {
             return false;
         }
 
@@ -2486,8 +2665,10 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
 
         /**
          * A {@link Gravity} value describing how this child view should lay out.
-         * If an {@link #setAnchorId(int) anchor} is also specified, the gravity describes
-         * how this child view should be positioned relative to its anchored position.
+         * If either or both of the axes are not specified, they are treated by CoordinatorLayout
+         * as {@link Gravity#TOP} or {@link GravityCompat#START}. If an
+         * {@link #setAnchorId(int) anchor} is also specified, the gravity describes how this child
+         * view should be positioned relative to its anchored position.
          */
         public int gravity = Gravity.NO_GRAVITY;
 
@@ -2531,7 +2712,8 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
         View mAnchorDirectChild;
 
         private boolean mDidBlockInteraction;
-        private boolean mDidAcceptNestedScroll;
+        private boolean mDidAcceptNestedScrollTouch;
+        private boolean mDidAcceptNestedScrollNonTouch;
         private boolean mDidChangeAfterNestedScroll;
 
         final Rect mLastChildRect = new Rect();
@@ -2722,16 +2904,29 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
             mDidBlockInteraction = false;
         }
 
-        void resetNestedScroll() {
-            mDidAcceptNestedScroll = false;
+        void resetNestedScroll(int type) {
+            setNestedScrollAccepted(type, false);
         }
 
-        void acceptNestedScroll(boolean accept) {
-            mDidAcceptNestedScroll = accept;
+        void setNestedScrollAccepted(int type, boolean accept) {
+            switch (type) {
+                case ViewCompat.TYPE_TOUCH:
+                    mDidAcceptNestedScrollTouch = accept;
+                    break;
+                case ViewCompat.TYPE_NON_TOUCH:
+                    mDidAcceptNestedScrollNonTouch = accept;
+                    break;
+            }
         }
 
-        boolean isNestedScrollAccepted() {
-            return mDidAcceptNestedScroll;
+        boolean isNestedScrollAccepted(int type) {
+            switch (type) {
+                case ViewCompat.TYPE_TOUCH:
+                    return mDidAcceptNestedScrollTouch;
+                case ViewCompat.TYPE_NON_TOUCH:
+                    return mDidAcceptNestedScrollNonTouch;
+            }
+            return false;
         }
 
         boolean getChangedAfterNestedScroll() {
@@ -3025,17 +3220,22 @@ public class CoordinatorLayout extends ViewGroup implements NestedScrollingParen
 
         }
 
-        public static final Parcelable.Creator<SavedState> CREATOR
-                = ParcelableCompat.newCreator(new ParcelableCompatCreatorCallbacks<SavedState>() {
-            @Override
-            public SavedState createFromParcel(Parcel in, ClassLoader loader) {
-                return new SavedState(in, loader);
-            }
+        public static final Parcelable.Creator<SavedState> CREATOR =
+                new ClassLoaderCreator<SavedState>() {
+                    @Override
+                    public SavedState createFromParcel(Parcel in, ClassLoader loader) {
+                        return new SavedState(in, loader);
+                    }
 
-            @Override
-            public SavedState[] newArray(int size) {
-                return new SavedState[size];
-            }
-        });
+                    @Override
+                    public SavedState createFromParcel(Parcel in) {
+                        return new SavedState(in, null);
+                    }
+
+                    @Override
+                    public SavedState[] newArray(int size) {
+                        return new SavedState[size];
+                    }
+                };
     }
 }
